// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onClick() 1`] = `
<Backdrop
  id="idBackDrop"
  onClick={[Function]}
  onMouseOver={[Function]}
/>
`;

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onClick() 2`] = `
<Backdrop
  id="idBackDrop"
  onClick={[Function]}
  onMouseOver={[Function]}
/>
`;

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onMouseOver() 1`] = `
<Backdrop
  id="idBackDrop"
  onClick={[Function]}
  onMouseOver={[Function]}
/>
`;

exports[`UU5.Bricks.Backdrop  props.function  UU5.Bricks.Backdrop - onMouseOver() 2`] = `
<Backdrop
  id="idBackDrop"
  onClick={[Function]}
  onMouseOver={[Function]}
/>
`;

exports[`UU5.Bricks.Backdrop background=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop background=true 1`] = `
<div
  className="uu5-bricks-backdrop uu5-bricks-backdrop-background"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop className="my-classname" 1`] = `
<div
  className="uu5-bricks-backdrop my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop className="test-classname" 1`] = `
<div
  className="uu5-bricks-backdrop test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop controlled=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop controlled=true 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop default props 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop disabled=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop disabled=false 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop disabled=true 1`] = `
<div
  className="uu5-bricks-backdrop uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Backdrop disabled=true 3`] = `
<div
  className="uu5-bricks-backdrop uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Backdrop elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-backdrop uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop fullTextSearchPriority=0 2`] = `
<div
  className="uu5-bricks-backdrop uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden=false 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden=true 1`] = `
<div
  className="uu5-bricks-backdrop uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop hidden=true 3`] = `
<div
  className="uu5-bricks-backdrop uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop id="myId" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop id="test-id" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop name="myName" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Backdrop nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Backdrop nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="smallBox" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop noPrint=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop noPrint=true 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop pureRender=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop pureRender=true 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop selected=false 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop selected=true 1`] = `
<div
  className="uu5-bricks-backdrop uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop style={"margin":8} 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Backdrop tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-backdrop"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
